src/snapshots/ldash__ui__tests__snapshot_accounts_with_data.snap
---
source: src/ui.rs
expression: render_to_string(&mut app)
---
  ⬡ Ledger Dashboard v1.0.0
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│   Accounts   │   Monthly                                                                                             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Net Worth History [All]  ◀ ▶ ────────────────────────────────────────────────────────────────────────────────────────╮
│                                                    Not enough data                                                   │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  Net Worth: 15.000,00 €                                                                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Asset Balances  [Enter drill-down] ──────────────────────────────────────────────────────────────────────────────────╮
│  Account                                           Balance (€)                                                       │
│                                                                                                                      │
│▶   assets:bank:checking                                 5.000,00 €  ████████████                                     │
│    assets:savings                                      10.000,00 €  ████████████████████████                         │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Test mode  [1-3] tab  [↑↓/jk] navigate  [←→/hl] month/range  [r] refresh  [?] help  [q] quit
