src/snapshots/ldash__ui__tests__snapshot_monthly_tab.snap
---
source: src/ui.rs
expression: render_to_string(&mut app)
---
  ⬡ Ledger Dashboard v0.1.0
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│   Accounts   │   Monthly                                                                                             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Income vs Expenses ──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ███     ███                                                                                                          │
│ ███     ███                                                                                                          │
│ ███     ███                                                                                                          │
│ ███▄▄▄  ███▃▃▃                                                                                                       │
│ ██████  ██████                                                                                                       │
│ ██████  ██████                                                                                                       │
│ ██████  ██████                                                                                                       │
│ ██████  ██████                                                                                                       │
│ Jan     Feb                                                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ ◀ January ▶ ─────────────────────╮╭ Savings Rate ────────────────────╮╭ Year to Date ────────────────────────────────╮
│  Income    3.000,00 €            ││███████████████                   ││  Net YTD   +2.650 €  (44% saved)             │
│  Expenses  1.700,00 €            ││███████████████                   ││  Best      Feb (+1.350 €)                    │
│  Net       +1.300,00 €           ││███████████████                   ││  Worst     Jan (1.300 €)                     │
│                                  ││███████████████                   ││ Income ▁▃▅ ──────────────────────────────────│
│                                  ││███████████████                   ││██                                            │
│                                  ││███████████████                   ││██                                            │
│                                  ││████████████43% saved             ││ Expenses ▁▃▅ ────────────────────────────────│
│                                  ││███████████████                   ││█▇                                            │
│                                  ││███████████████                   ││██                                            │
│                                  ││███████████████                   ││ Net ▁▃▅ ─────────────────────────────────────│
│                                  ││███████████████                   ││▇█                                            │
│                                  ││███████████████                   ││██                                            │
╰──────────────────────────────────╯╰──────────────────────────────────╯╰──────────────────────────────────────────────╯
╭ Income ──────────────────────────────────────────────────╮╭ Expenses ────────────────────────────────────────────────╮
│Source                                        Amount      ││  Category                                    Amount      │
│                                                          ││                                                          │
│salary                                        3.000,00 €  ││▶ housing                                     1.200,00 €  │
│                                                          ││  food                                        500,00 €    │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯
Test mode  [1-3] tab  [↑↓/jk] navigate  [←→/hl] month/range  [r] refresh  [?] help  [q] quit
